--- a/public/index.html
+++ b/public/index.html
@@ -1,30 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-    <script src="lib/react.js"></script>
-    <script src="lib/react-dom.js"></script>
-    <script src="lib/history.js"></script>
-    <script src="lib/react-router.js"></script>
-    <script src="lib/react-router-dom.js"></script>
-    <script src="lib/axios.js"></script>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-    <link rel="stylesheet" href="lib/animate.css" />
-    <link rel="stylesheet" href="assets/style/main.css" />
+  <script src="lib/react.js"></script>
+  <script src="lib/react-dom.js"></script>
+  <script src="lib/history.js"></script>
+  <script src="lib/react-router.js"></script>
+  <script src="lib/react-router-dom.js"></script>
+  <script src="lib/axios.js"></script>
 
-    <title>React Bug App</title>
-  </head>
+  <link rel="stylesheet" href="lib/animate.css" />
+  <link rel="stylesheet" href="assets/style/main.css" />
 
-  <body>
-    <div id="root"></div>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <script type="module/babel" data-presets="ca-preset" src="app.js"></script>
+  
+  <title>React Bug App</title>
+</head>
 
-    <script src="lib/loadBabelModules.js"></script>
-    <script src="lib/babel.js"></script>
-    <script src="lib/babel-preset.js"></script>
-  </body>
+<body>
+  <div id="root"></div>
+
+  <script type="module/babel" data-presets="ca-preset" src="app.js"></script>
+
+  <script src="lib/loadBabelModules.js"></script>
+  <script src="lib/babel.js"></script>
+  <script src="lib/babel-preset.js"></script>
+</body>
+
 </html>
